--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:32.2.3"))
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.recaptcha:recaptcha:18.4.0'
 }
