--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: becuser3
 description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+2
+version: 3.0.0
 
 environment:
   sdk: ">=3.0.6 <4.0.0"
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # firebase_auth: ^3.3.16
-  firebase_auth: ^4.7.3
+  firebase_auth: ^4.19.5
   # firebase_core: ^1.15.0
   firebase_core: ^2.15.1
   # cloud_firestore: ^3.1.13
